# salt-lake-satellite

./: .gitignore  README.md  environment.yml  project_config.yml  pyproject.toml  requirements.txt  setup.cfg
01_notes/: Analysis.md  DataCleaning.md  DataCollection.md  EnvironmentAndTools.md
02_executable_code/00_exploration/: README.txt
02_executable_code/01_data_collection/: download_landsat_data.py
02_executable_code/02_data_cleaning/: 02_check_crs.py  03_test_train_split.py  04_generate_truth_mask.py  check_crs.py  generate_truth_mask.py  process_landsat.py  test_train_split.py
02_executable_code/03_analysis/: geosample.py
cc_geology/tests/: context.py
documents/: README.md
executable_code/: README.md
executable_code/analysis/: README.md
executable_code/exploratory/: README.md
executable_code/figure_generation/: README.md
executable_code/processing/: README.md
figures/: README.md
module_code/: README.md
notes/: README.md
processed_data/: README.md
raw_data/: README.md
salt_lake/utils/data_collection/: earth_explorer.py
salt_lake_satellite/analysis/: geosample.py
salt_lake_satellite/data_cleaning/: raster_mask.py  test_train.py
salt_lake_satellite/plotting/: batch_plots
salt_lake_satellite/tests/: context.py
tests/: README.md
